fix size banner, font size mobile, default dark mode

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 0 30px;
-  padding: 40px;
+  padding: 10px 40px;
   &_content {
     & h3 {
       font-size: 24px;
@@ -26,12 +26,13 @@
   }
   @media screen and (max-width: 767px) {
     flex-direction: column;
-    padding: 20px;
+    padding: 10px 20px;
     &_content {
       font-size: 15px;
       margin-bottom: 10px;
       & h3 {
         text-align: center;
+        font-size: 18px;
       }
       & > p {
         font-size: 14px;
