--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -5,7 +5,7 @@
   padding: 5px 0;
 }
 .page-section {
-  margin: 30px 0;
+  margin: 15px 0px;
 }
 hr.divider {
   height: 0.2rem;
@@ -59,10 +59,3 @@ hr.divider {
 .space {
   margin-top: 20px;
 }
-
-// h2 {
-//   @media screen and (min-width: 767px) {
-//     font-size: 3em;
-//   }
-
-// }
