--- a/src/scss/_skills.scss
+++ b/src/scss/_skills.scss
@@ -1,17 +1,5 @@
 .skills {
   &_icons {
-    //  display: grid;
-    //  grid-template-columns: repeat(4,1fr) ;
-    //  grid-template-rows: repeat(2,1fr);
-    //  gap: 0 50px;
-
-    // display: flex;
-    // justify-content: space-evenly;
-    // flex-wrap: wrap;
-    // font-size: 100px;
-
-    // display: grid;
-    // grid-template-columns: 1fr 1fr 1fr;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -84,6 +72,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      padding: 0px 30px;
     }
     &_icon {
       width: 20%;
